<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableRow >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_fruta" />

            <Spinner
                android:id="@+id/spn_fruta_despesa"
                android:layout_weight="1"
                android:layout_height="wrap_content"></Spinner>

        </TableRow>

        <TableRow android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_tipo" />

            <Spinner
                android:id="@+id/spn_tipo_despesa"
                android:layout_weight="1"
                android:layout_height="wrap_content"></Spinner>

        </TableRow>

        <TableRow android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_quantidade" />

            <EditText
                android:id="@+id/edt_quantidade_despesa"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_valor" />

            <EditText
                android:id="@+id/spn_valor_despesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_descricao" />

            <EditText android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="100" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:weightSum="2">

            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/btn_salvar"
                android:layout_alignParentBottom="true"
                android:id="@+id/btn_salvar_despesa"/>

            <Button
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancelar"
                android:layout_alignParentBottom="true"
                android:id="@+id/btn_cancelar_cadastros"/>
        </TableRow>
    </TableLayout>

</LinearLayout>